--- a/styles.css
+++ b/styles.css
@@ -8,50 +8,72 @@
 	src: url("fonts/Aptly.otf") format("opentype")
 }
 
-.banner {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 150px;
-	width: 100%;
+html, body {
+	overflow-x: hidden;
 	padding: 0;
 	margin: 0;
-	border-radius: 15px;
-	background-color: rgba(231, 141, 48, 0.7);
 }
 
-.logo {
-	width: 13%;
-	height: auto;
+li {
+	list-style: none;
 }
 
-.menu ul{
-	list-style-type : none;
-	margin: 0;
-	padding: 0;
-	display: flex;
-	justify-content: center;
-}
-
-.menu  {
-	margin: 20px;
-}
-
-.menu li{
-	display: inline-block;
-	margin: 25px 25px; 
-	font-size: 38px;
-	font-family: "aptly";
-	color: white;
-}
-
-.menu li a {
-	color: inherit;
+a {
 	text-decoration: none;
+	color: #26875d;
+	font-size: 1.5rem;
+	font-family: "aptly";
+
+}
+
+.lien-button {
+	color: white;
+	text-decoration: none;
+	font-size: 1.5rem;
+	font-family: "aptly";
+}
+
+a:hover {
+	color: #ffffff;
+}
+
+header {
+	position: relative;
+	padding: 0 2rem;
+	background-color: #d8f4e8; 
+}
+
+.navbar {
+	width: 100%;
+	max-width: 1200px;
+	height: 120px;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	overflow-x: hidden;
+	overflow-y: hidden;
+}
+
+.logonavbar {
+	width: auto;
+	height: 100px;
+}
+
+.navbar .links {
+	display: flex;
+	gap: 2rem;
+}
+
+.navbar .burger-menu-button {
+	color: #26875d;
+	font-size: 1.5rem;
+	cursor: pointer;
+	display: none;
 }
 
 .texte {
-	font-size: 40px;
+	font-size: 30px;
 	font-family: "aptly";
 	color: #26875d;
 }
@@ -64,7 +86,9 @@
 	}
 
 #slider {
-	width: 640px;
+	width: 100%;
+	max-width: 500px;
+	max-height: 333px;
 	overflow: hidden;
 }
 
@@ -80,13 +104,13 @@
 		transform: translateX(0);
 	}
 	25% {
-		transform: translateX(-640px);
+		transform: translateX(-500px);
 	}
 	50% {
-		transformation: translateX(-1280px);
+		transformation: translateX(-1000px);
 	}
 	75% {
-		transform: translateX(-1920px);
+		transform: translateX(-1500px);
 	}
 	100% {
 		transform: translateX(0);
@@ -98,9 +122,9 @@
 .btn {
 	text-align: center;
 	margin-top: 15px;
-	margin-left: none;
-	margin-right: none;
-	margin-bottom: none;
+	margin-left: 0;
+	margin-right: 0;
+	margin-bottom: 0;
 	padding: 15px;
 	font-size: 30px;
 	font-family: "aptly";
@@ -110,24 +134,31 @@
 	border-radius: 15px;
 }
 
+.btn a:hover {
+	color: #F8E27C;
+}
 
 .h1 {
 	text-align: center;
 	margin-top: 30px;
 	margin-bottom: 0px;
+	margin-left: auto;
+	margin-right: auto;
+	width: 30%;
 	padding: 5px;
-	font-size: 40px;
+	font-size: 35px;
 	font-family: "aptly";
-	color: #ffffff;
-	background-color: rgba(231, 141, 48, 0.7);
+	color: #26875d;
+	background-color: #d8f4e8;
 	border-radius: 15px;
 }
 
 .h2{
 	text-align: center;
-	font-size: 30px;
+	font-size: 25px;
+	width: 100%;
 	font-family: "aptly";
-	color: rgba(231, 141, 48, 0.7);
+	color: #26875d;
 }
 
 .feuilles {
@@ -141,8 +172,8 @@
 .logofeuilles {
 	width: 35px;
 	height: auto;
-	margin: none
-	padding: none;
+	margin: 0;
+	padding: 0;
 }
 
 .btn2 {
@@ -150,7 +181,7 @@
 	margin-top: 15px;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: none;
+	margin-bottom: 0;
 	padding: 15px;
 	font-size: 30px;
 	font-family: "aptly";
@@ -160,18 +191,23 @@
 	border-radius: 15px;
 }
 
+.btn2 a:hover {
+	color: #F8E27C;
+}
+
 .p {
 	text-align: center;
 	margin: 0;
+	width: 100;
 	padding: 10px;
-	font-size: 25px;
+	font-size: 20px;
 	font-family: "aptly";
 	color: black;
 
 }
 
 .logofooter {
-	padding-top: 5x;
+	padding-top: 5px;
 	text-align: center;
 	width: 300px;
 	height: auto;
@@ -183,8 +219,8 @@
 	text-align: center;
 	font-size: 20px;
 	font-family: "aptly";
-	color: #ffffff;
-	background-color: rgba(231, 141, 48, 0.7);
+	color: white;
+	background-color: #26875d;
 }	
 
 .pfooter {
@@ -192,15 +228,76 @@
 	margin: none;
 }
 
-@media (max-width: 768px) {
-	.photo {
+/* ------- burger menu ------- */
+
+.burger-menu {
+	display: none;
+	height: 0;
+	position: absolute;
+	right: 2rem;
+	top: 120px;
+	max-width: none;
+	width: 50%;
+	z-index: 1;
+	background-color:rgba(231, 141, 48, 1);
+	backdrop-filter: blur(15px);
+	overflow: hidden;
+	border-radius: 10px;
+	transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275)
+}
+
+.burger-menu.open {
+	height: 180px;
+	width: 300px;
+	padding: 0;
+	margin: 0;
+}
+
+}.burger-menu ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
+	gap: 50px;
 }
+
+/* ------- responsive ------- */
+
+@media (max-width: 900px) {
+	.navbar .links {
+		display: none;
+	}
+
+	.navbar .burger-menu-button {
+		display: block;
+	}
+
+	.burger-menu {
+		display: block;
+	}
+
+	.photo {
+		flex-direction: column;
+		align-items: center;
+		}
+
+	.banner {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.menu {
+		margin: 0;
+	}
+
+	.menu li {
+		margin: 15px o;
+		font-size: 28px;
+	}
+
 }
-
-
-
-
 
 
