--- a/styles.css
+++ b/styles.css
@@ -219,7 +219,7 @@ header {
 	font-size: 20px;
 	font-family: "aptly";
 	color: white;
-	background-color: #26875d;
+	background-color: #ia5e41;
 }	
 
 .pfooter {
