--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ html, body {
 	overflow-x: hidden;
 	padding: 0;
 	margin: 0;
+	padding-top: 65px;
 }
 
 li {
@@ -39,7 +40,14 @@ a:hover {
 header {
 	position: relative;
 	padding: 0 2rem;
-	background-color: #F8E27C; 
+	background-color: #F8E27C;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 120px;
+	z-index: 1;
+	margin-bottom: 15px;
 }
 
 .navbar {
