--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,8 @@ header {
 	width: 100%;
 	height: 120px;
 	z-index: 1;
-	margin-bottom: 15px;
+	margin-bottom: 15px;	
+	background-color: #faebaf;
 }
 
 .navbar {
@@ -153,11 +154,12 @@ header {
 	margin-right: auto;
 	width: 30%;
 	padding: 5px;
-	font-size: 35px;
+	font-size: 30px;
 	font-family: "aptly";
 	color: #26875d;
-	background-color: #F8E27C;
+	background-color: #faebaf;
 	border-radius: 15px;
+	border: solid;
 }
 
 .h2{
@@ -207,10 +209,9 @@ header {
 	margin: 0;
 	width: 100;
 	padding: 10px;
-	font-size: 18px;
+	font-size: 19px;
 	font-family: "arial";
 	color: black;
-
 }
 
 .logofooter {
@@ -246,7 +247,7 @@ header {
 	max-width: none;
 	width: 50%;
 	z-index: 1;
-	background-color: #c2dbd0; 
+	background-color: #e1d196; 
 	backdrop-filter: blur(15px);
 	overflow: hidden;
 	border-radius: 10px;
