--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ html, body {
 	padding: 0;
 	margin: 0;
 	padding-top: 65px;
-	background-color: #fae9a7
+	background-color: #fefee2;
 }
 
 li {
@@ -48,7 +48,7 @@ header {
 	height: 120px;
 	z-index: 1;
 	margin-bottom: 15px;	
-	background-color: #faebaf;
+	background-color: #fefee2;
 	border-bottom: dashed #26875d;
 }
 
@@ -158,7 +158,6 @@ header {
 	font-size: 30px;
 	font-family: "aptly";
 	color: #26875d;
-	background-color: #faebaf;
 	border-radius: 15px;
 	border: solid;
 }
